--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@ layout: layout
 		<div class="col-md-6">
 				<h3>Gitcharts</h3>
 				<p>Explore anomalies and keep tidy your git repository.</p>
-				<p><a href="http://gcharts.briskat.com">
-				<img src="img/gcharts.png" class="img-responsive center-block" alt="git charts"></a>
+				<p><a href="gitcharts.html">
+				<img src="img/gcharts.png" class="img-responsive center-block" alt="Interactive git analytics. Live git stats."></a>
 				</p>
 		</div>
 		<div class="col-md-6">
