--- a/index.html
+++ b/index.html
@@ -6,27 +6,24 @@ layout: layout
 <br/>
 <div class="row text-center">
        <div class="col-md-12"><h1>Analytics</h1>
+       <small><i>powered by super-fast <a data-target="#MIADB" href="#MIADB" data-toggle="modal"><b>MIA database</b></a></i></small>
        </div>
 </div>
 <div class="row text-center">
 		<div class="col-md-6">
-				<h3>Gitcharts</h3>
-				<p>Explore anomalies and keep tidy your git repository.</p>
+				<h2><a href="http://a.plumplot.co.uk/a/git_statistics.html">Gitcharts</a></h2>
+				<p><small><i>Explore anomalies and keep tidy your git repository.</i></small></p>
 				<p><a href="gitcharts.html">
 				<img src="img/gcharts.png" class="img-responsive center-block" alt="Interactive git analytics. Live git stats."></a>
 				</p>
 		</div>
 		<div class="col-md-6">
-				<h3>House prices</h3>
-				<p><a href="http://blog.landregistry.gov.uk/spotlight-on-housing-expert-henry-pryor" target="_blank">Used</a> by Henry Pryor, the BBC's favourite property expert.</p>
-				<p><a href="http://house.briskat.com">
-				<img src="img/house.png" class="img-responsive center-block" alt="England and Wales house prices, historic trends."></a>
+				<h2><a href="http://www.plumplot.co.uk">House price advisor</a></h2>
+				<p><small><i><a href="http://blog.landregistry.gov.uk/spotlight-on-housing-expert-henry-pryor" target="_blank">Used</a> by Henry Pryor, the BBC's fav property expert.</i></small></p>
+				<p><a href="http://a.plumplot.co.uk">
+				<img src="img/house.png" class="img-responsive center-block" alt="England house prices."></a>
 				</p>
 		</div>
-</div>
-<div class="row text-center">
-       <div class="col-md-12"><b>Powered by MIA DB</b> - multiuser interactive analytical database. <a data-target="#MIADB" href="#MIADB" data-toggle="modal">Tell me more.</a>
-       </div>
 </div>
 <div class="row text-center">
 	<div class="modal fade" id="MIADB" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
@@ -38,7 +35,7 @@ layout: layout
 		  </div>
 		  <div class="modal-body text-left">
 				<p>is <b>M</b>ulti-user (and Multi-tenant) <b>I</b>nteractive <b>A</b>nalytical <b>d</b>ata<b>b</b>ase developed by Briskat.
-				Our revolutionary architecture combines concepts from the outside
+				Revolutionary architecture combines concepts from the outside
 				world ( e.g. Git, Dropbox, Erlang ) with our previous experience in OLAP industry.
                 </p>
 				<p>MIA enables <b>fast development</b> of various kind of analytics. At the same time,
@@ -63,58 +60,38 @@ layout: layout
 	  </div>
 	</div>
 </div>
-<hr/>
 </section>
 <section id="CONTACT">
-<div class="row text-center">
-	<div class="col-md-4">
-		<p>
-		<h2>Contact us</h2>
-		<h3><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
+<div class="col-lg-12 text-center">
+		<h2><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
 		ask&commat;<img src="img/logo-s.png" alt="briskat" style="padding-bottom: 11px" width="110" height="58">.com
-		</h3>
-		</p>
-		<p>
-		<a href="https://www.facebook.com/pages/Briskat/521963701278696"><img src="img/facebook.png" alt="Briskat Facebook" width="30" height="30"></a>
-		<a href="https://www.twitter.com/thebriskat"><img src="img/twitter.png" alt="Briskat Twitter" width="30" height="30"></a>
-		<a href="https://www.linkedin.com/company/briskat"><img src="img/linkedin.png" alt="Briskat LinkedIn" width="30" height="30"></a>
-		<a href="https://www.youtube.com/user/thebriskat"><img src="img/youtube.png" alt="Briskat YouTube" width="30" height="30"></a>
-		</p>
-		<h3>Our story</h3>
-		  <iframe class="embed-responsive-item" src="http://www.youtube.com/embed/Dp5jRJPFOiA?showinfo=0&rel=0&autohide=1" style="border: 3px solid #aaa;" allowfullscreen></iframe>
-	</div>
-	<div class="col-md-8">
-		<h2>Founders</h2>
-	<div class="col-md-6">
-	<h3>
-	<a href="https://www.linkedin.com/pub/vladimir-makovsky/2a/141/141"><img src="img/linkedin.png" alt="Vlada" width="24" height="24"></a>
-	Vladimir Makovsky<small>, CEO</small></h3>
-	<center><img class="img-responsive" src="img/vlada.png" alt="Vlada" width="183" height="225"><br/><center>
-	<p><small>worked as a developer for two succesfull Saas companies Broadbean, GoodData from an early stage.</small></p>
-	</div>
-	<div class="col-md-6">
-	<h3>
-	<a href="https://www.linkedin.com/in/hynekvychodil"><img src="img/linkedin.png" alt="Hynek" width="24" height="24"></a>
-	Hynek Vychodil<small>, CTO</small></h3><center><img class="img-responsive" src="img/hynek.png" alt="Hynek" width="183" height="225"><br/></center>
-	<p><small>an author of GoodData analytic query language which is used in dashboards in thousands companies including 42% of Fortune 500.</small></p>
-	</div>
-	</div>
+		</h2>
+        <h1></h1>
 </div>
 </section>
-
-<hr/>
 <div class="row text-center">
-       <div class="col-md-4 text-center"><h2>Developer's corner</h2>
-		<a href="http://datamatic.co/page/how-to-create-an-interactive-data-analytic-map"><img src="img/datamatic.png" class="img-responsive center-block" alt="tutorial">How to create<br/></a> an interactive analytic map
-       </div>
-       <div class="col-md-4 text-center"><h2>Interview for</h2>
-		<a href="http://blog.landregistry.gov.uk/price-paid-data-briskat-common-guest-blog"><img src="img/lr.png" class="img-responsive center-block" alt="tutorial"></a>
-       </div>
-       <div class="col-md-3 text-center"><h2>Our latest blog</h2>
-		<a href="/blog/housing-market-after-bubble">UK 2007 housing bubble – Analysis 9 years on</a>
-       </div>
-       <div class="col-md-1 text-center">
-        <br/><br/><img src="/img/posts/11_ukcrash.png" class="img-responsive center-block" alt="UK housing bubble in 2007">
-       </div>
+	<div class="col-md-4">
+        <div class="span12" style="border: 1px solid #bbb;">
+        <a class="twitter-timeline" href="https://twitter.com/thebriskat" data-widget-id="725626261725388800">Tweets by @thebriskat</a>
+        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+        </div>
+	</div>
+	<div class="col-md-8">
+        <div class="col-md-6">
+           <h2>Interview for</h2>
+            <br/><a href="http://blog.landregistry.gov.uk/price-paid-data-briskat-common-guest-blog"><img src="img/lr.png" class="img-responsive center-block" alt="tutorial"></a>
+        </div>
+        <div class="col-md-6">
+           <h2>Developer's corner</h2>
+            <br/><a href="http://datamatic.co/page/how-to-create-an-interactive-data-analytic-map/"><img src="img/datamatic.png" class="img-responsive center-block" alt="tutorial">How to create<br/></a> an interactive analytic map
+        </div>
+        <div class="col-md-6">
+           <h2><a href="http://imgur.com/a/VCKTZ">UK open data</a></h2>
+            England house prices, house sales, population and crime in maps and graphs.
+        </div>
+        <div class="col-md-6">
+           <h2><a href="http://imgur.com/a/NMkFL">London open data</a></h2>
+           house prices, property sales volumes in maps and graphs.
+        </div>
+	</div>
 </div>
-<hr/>
